# AgentIQ

./: .gitignore  README.md  demo_batch_leads.csv
backend/: demo_proposal.json  pyproject.toml  sarah_global_proposal.txt  test_agent.py  test_batch_drafts.json  test_crm_integration.py
backend/app/: main.py
backend/app/api/: sse.py
backend/app/api/routes/: __init__.py  agent.py  agent_chat.py  auth.py  batch.py  drafts.py  knowledge.py  salesforce.py
backend/app/core/agent/: graph.py  nodes.py  state.py
backend/app/schemas/: state.py
backend/app/services/: ai_insights.py  batch_processor.py  llm.py  pdf_engine.py  salesforce.py  supabase.py
backend/scripts/: ingest_docs.py  test_endpoints.py
frontend /my-app/: package.json
frontend /my-app/app/: globals.css  layout.js  page.jsx
frontend /my-app/app/(auth)/login/: page.jsx
frontend /my-app/app/(protected)/: layout.jsx
frontend /my-app/app/(protected)/agent/: page.jsx
frontend /my-app/app/(protected)/batch/: layout.jsx  page.jsx
frontend /my-app/app/(protected)/dashboard/: page.jsx
frontend /my-app/app/(protected)/drafts/: page.jsx
frontend /my-app/app/callback/: page.jsx
frontend /my-app/components/batch/: BatchModeDashboard.jsx
frontend /my-app/components/dashboard/: AIAgentChat.jsx  KnowledgeBase.jsx  TopBar.jsx  sidebar.jsx
frontend /my-app/store/: store.js
frontend /my-app/store/features/: authSlice.js  draftsSlice.js  kbSlice.js
